<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tk.dinud11.worddb.CustomInfoActivity">

    <TextView
        android:id="@+id/info_word"
        android:text="@string/delete"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/info_def_place"
        android:text="@string/definition"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/info_word"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:textColor="#47c11f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/info_def"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="@+id/info_def_place"
        app:layout_constraintLeft_toRightOf="@id/info_def_place"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/info_type"
            android:layout_marginTop="30dp"
            android:text="@string/type"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_def_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/info_categ"
            android:layout_marginTop="30dp"
            android:text="@string/category"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/info_def_place"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/delbtn"
        android:text="@string/delete"
        android:drawableEnd="@drawable/ic_delete_black_18dp"
        app:layout_constraintTop_toBottomOf="@+id/info_type"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="@id/info_categ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/editbtn"
        android:text="@string/edit"
        android:drawableEnd="@drawable/ic_create_black_18dp"
        app:layout_constraintTop_toTopOf="@id/delbtn"
        app:layout_constraintLeft_toLeftOf="@id/info_def_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>
